# OculusToSteamVR

./: .gitignore  .gitmodules  README.md  contributors.md
assets/: Thumbs.db
src/: .todo  CMakeLists.txt
src/OVRClient/: OVRClient.cpp  OVRClient.hpp
src/OVRClient/libraries/DirectX/: Win32_DirectXAppUtil.h
src/OVRClient/x64/Debug/: OVRClient.exe.recipe  OVRClient.vcxproj.FileListAbsolute.txt
src/OculusToSteamVRClient/: DataSender.cpp  DataSender.h  GuardianSystemDemo.cpp  GuardianSystemDemo.h  Includes.h  OculusToSteamVRClient.cpp  OculusToSteamVRClient.h  OculusToSteamVRClient.sln  OculusToSteamVRClient.vcxproj  OculusToSteamVRClient.vcxproj.filters  Program.cpp  manifest.vrmanifest  ~AutoRecover.OculusToSteamVRClient.vcxproj
src/OculusToSteamVRClient/x64/Debug/: OculusToSteamVRClient.vcxproj.FileListAbsolute.txt  vc143.idb
src/OculusToSteamVRDriver/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ControllerDevice.cpp  ControllerDevice.hpp  DataReceiver.cpp  DataReceiver.h  DeviceType.hpp  Driver.cpp  Driver.h  DriverFactory.cpp  DriverFactory.hpp  Entrypoint.cpp  Entrypoint.h  HMDDevice.cpp  HMDDevice.hpp  Helpers.hpp  IVRDevice.h  IVRDevice.hpp  IVRDriver.hpp  OculusDeviceType.hpp  OculusToSteamVRDriver.sln  OculusToSteamVRDriver.vcxproj  OculusToSteamVRDriver.vcxproj.filters  SharedData.hpp  SharedVRProperties.cpp  SharedVRProperties.h  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp  VRSensor.cpp  VRSensor.h  VRTracker.cpp  VRTracker.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  (+5 more)
src/OculusToSteamVRDriver/CustomHMD/: OculusTouchLink.cpp
src/OculusToSteamVRDriver/CustomHMD/Debug/: vc143.idb
src/OculusToSteamVRDriver/CustomHMD/Release/x64/: driver_CustomHMD.lib
src/OculusToSteamVRDriver/driver_files/driver/OculusToSteamVR/: driver.vrdrivermanifest
src/OculusToSteamVRDriver/driver_files/oculus_to_steamvr/: driver.vrdrivermanifest
src/OculusToSteamVRDriver/ovr_test/: DataReceiver.cpp  DataReceiver.h  ovr_test.cpp
src/OculusToSteamVRShared/: OculusToSteamVRShared.vcxitems  SOculusData.h
src/SteamVRDriver/: CMakeLists.txt
src/driver_files/driver/oculus_to_steamvr/: driver.vrdrivermanifest
src/driver_files/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  DeviceType.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  OculusTexture.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp
src/driver_files/src/Native/: DriverFactory.cpp  DriverFactory.hpp
src/libraries/DirectX/: Win32_DirectXAppUtil.h
src/shared/: SharedData.hpp
(+17 files in other folders)
